[package]
name = "mysql-trawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.25.0"
chrono = { version = "0.4.0", features = ["serde"] }
futures-core = "0.3.0"
futures-util = "0.3.0"
mysql_async = "0.23.0"
trawler = "0.11.0-alpha.7"
tower-service = "0.3.0"
